# argusc2

./: .gitattributes
backend/: .env.example  .gitignore  Cargo.toml  README.md  argusc2_db.session.sql  docker-compose.yml
backend/logs/: app.log.2026-03-16
backend/migrations/: 20260316130323_create_admins_table.sql  20260321171040_create_program_types_table.sql  20260321182026_create_programs_table.sql  20260321182111_create_devices_table.sql  20260321182144_create_upload_tickets_table.sql  20260321182251_create_uploads_table.sql  20260321193937_create_capabilities_table.sql  20260321194008_create_program_capabilities_table.sql  20260321201737_create_notifications_table.sql  20260327071400_create_events_table.sql  20260327071429_create_keylog_table.sql
backend/prototype/: capabilities.py  config.py  handlers.py  main.py  transport.py
backend/src/: auth.rs  db.rs  logger.rs  main.rs  setup.rs  state.rs
backend/src/api/: accounts.rs  auth.rs  capabilities.rs  devices.rs  download.rs  mod.rs  program_types.rs  programs.rs
backend/src/ws/: README.md  frontend.rs  implant.rs  mod.rs  shared.rs
backend/uploads/: 289d8cf2bd7dc972_njam  b2f0efe1e4a53051_main.py  d52886445f90e98d_main.py
frontend/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: types.ts
frontend/src/lib/stores/: deviceSocket.ts
frontend/src/lib/styles/: _variables.scss  global.scss
frontend/src/lib/utils/: programs.ts
frontend/src/routes/: +layout.svelte  +page.svelte
(+55 files in other folders)
