[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["fs"] }
tokio = { version = "1.50.0", features = ["full"] }
hyper = "1.8.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "mysql", "macros"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
